data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1810.wast
;; 1. **Test Description:** Call a function that contains a `br_if` with an invalid label index. Check if the implementation correctly reports an "out-of-bounds" label error when the condition is met.    - **Constraint:** This tests whether the label index is properly validated against the context's label stack.    - **Improper Handling:** If indirect error-handling is misused, the function may jump to an unintended label.

(assert_invalid
  (module (func $invalid-br_if-label
    (block
      (br_if 1 (i32.const 1))
    )
  ))
  "unknown label"
)